funciona a medias un procedimiento almacenado

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,11 +18,11 @@
         </tr>
       </thead>
       <tbody>
-        <% users.forEach(user => { %>
+        <% alumnosPorInstrumento.forEach(user => { %>
           <tr>
-            <td><%= user.Viaje %></td>
-            <td><%= user.Matricula %></td>
-            <td><%= user.PesoTotal %></td>
+            <td><%= user.instrumento %></td>
+            <td><%= user.cantidad_alumnos %></td>
+            <td><%= user.cantidad_alumnos %></td>
           </tr>
         <% }) %>
       </tbody>
