--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lista de Usuarios</title>
+  <title>Inicio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
+  <%- include('partials/menu') %>
   <div class="container mt-5">
-    <h1 class="mb-4">Lista de Usuarios</h1>
+    <h1 class="mb-4">soy index.ejs</h1>
 
-    <table class="table table-striped table-bordered">
-      <thead class="table-dark">
-        <tr>
-          <th>Viaje</th>
-          <th>Matricula</th>
-          <th>PesoTotal</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% alumnosPorInstrumento.forEach(user => { %>
-          <tr>
-            <td><%= user.instrumento %></td>
-            <td><%= user.cantidad_alumnos %></td>
-            <td><%= user.cantidad_alumnos %></td>
-          </tr>
-        <% }) %>
-      </tbody>
-    </table>
+
   </div>
 
 </body>
