--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,13 @@
 <body class="bg-light">
 
   <%- include('partials/menu') %>
-  <div class="container mt-5">
-    <h1 class="mb-4">soy index.ejs</h1>
+  <div class="container mt-5 text-center">
+  <img src="/img/personajes.svg" alt="Personajes" 
+       class="img-fluid"
+       style="max-width: 1000px; width: 100%; height: auto;">
 
-
-  </div>
+  <p class="mt-4 fs-4">¡Bienvenido a la Escuela de Música - ACORDES BOLIVIA!</p>
+</div>
 
 </body>
 </html>
