--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/menu.ejs -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="/">Sistema Escuela</a>
+    <a class="navbar-brand" href="/">Escuela de Música - ACORDES BOLIVIA</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,17 +11,14 @@
           <a class="nav-link" href="/alumnos">Alumnos por instrumento</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/asistencia">Asistencia por fechas</a>
+          <a class="nav-link" href="/asistencia">Seguimiento a alumnos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pagos-sueltos">Pagos sueltos</a>
+          <a class="nav-link" href="/pagos-sueltos">Pagos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pagos-mensuales">Pagos mensuales</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Inicio</a>
-        </li>
+          <a class="nav-link" href="/pagos-mensuales">Finanzas</a>
+        </li>        
       </ul>
     </div>
   </div>
